--- a/src/componentes/ItemListContainer/itemlistcontainer.css
+++ b/src/componentes/ItemListContainer/itemlistcontainer.css
@@ -1,3 +1,8 @@
+.tituloprincipal{
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .item-list-container{
     padding: 50px;
     display: flex;
@@ -18,6 +23,7 @@
     flex-direction: column;
     justify-content: center;
     background-color: black;
+    color: white;
 }
 .item .card-img-top {
     width: 100%;
@@ -28,7 +34,7 @@
 .card-text{
     text-align: center;
     font-family: 'Times New Roman', Times;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .card-title {
@@ -46,5 +52,31 @@
     padding: 1% 0;
 
 }
+.item{
+    text-decoration: none;
+    
+}
 
 
+.botonDetalle{
+    margin-top: 3%;
+    margin-left: 25%;
+    width: 50%;
+    text-align: center;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    border: 1px solid white;
+    padding: 5px 10px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    list-style-type: none;
+    text-decoration: none;
+    font-weight: 550;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+
+.botonDetalle:hover{
+    background-color: white;
+    color: black;
+}
