--- a/src/componentes/ItemDetailContainer/itemdetail.css
+++ b/src/componentes/ItemDetailContainer/itemdetail.css
@@ -1,3 +1,54 @@
 .itemDetail{
     display: flex;
 }
+
+.imgdetail{
+    margin-left: 0.3%;
+    margin-top: 0.2%;
+    margin-bottom:0.2% ;
+    width: 60%;
+    height: 699px;
+    border-radius: 1%;
+    box-shadow: 0 0 5px gray;
+}
+.boxdetail{
+    margin-right: 1.5%;
+    margin-left: 2%;
+    margin-top: 13%;
+    border-style: groove;
+    padding-top:4%;
+    margin-bottom: 9%;
+    box-shadow: 0 5px 15px gray;
+    
+}
+.name{
+    text-align: center;
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.327);
+}
+.description{
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    font-style: oblique;
+    margin-right: 2%;
+    margin-left: 2%;
+}
+.price{
+    text-align: center;
+    margin-top: 3%;
+    margin-left: 38%;
+    width: 23%;
+    text-align: center;
+    background-color: rgba(191, 191, 191, 0.828);
+    color: rgb(0, 0, 0);
+    border: 1px solid white;
+    padding: 5px 10px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    list-style-type: none;
+    text-decoration: none;
+    font-weight: 550;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    
+}
