--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: black;
+  list-style-type: none;
+  text-decoration: none;
 }
