--- a/src/componentes/ItemDetailContainer/itemdetail.css
+++ b/src/componentes/ItemDetailContainer/itemdetail.css
@@ -1,35 +1,66 @@
-.itemDetail{
+.itemDetailContainer{
     display: flex;
+    flex-direction: row;
+}
+.itemDetailContainer{
+    padding: 30px;
 }
 
 .imgdetail{
-    margin-left: 5.3%;
+    margin-left:1.3%;
     margin-top: 3.2%;
     margin-bottom:3.2% ;
-    width: 52%;
+    width: 100%;
     height: 600px;
     border-radius: 1%;
-    box-shadow: 0 0 5px gray;
+    box-shadow: 0 0 10px gray;
+    border: solid 2px black;
 }
-.boxdetail{
+.itemDetailImage{
 
-    width: 50%;
+    width: 54%;
     
+}
+.itemDetailInfo{
+    width: 35%;
+    height: 550px;
+    margin-left: 10%;
+    margin-top: 2%;
+    text-align: center;
+    background-color: rgba(128, 128, 128, 0.095);
+    box-shadow: 0 0 18px gray;
+    border-radius: 1%;
+   
+
 }
 .name{
     margin-top: 15%;
-    margin-right: 50%;
+    margin-bottom: 5%;
     text-align: center;
+    background-color: #44444455;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding-bottom: 2%;
+    padding-top: 2%;
     text-shadow: 0 2px 10px rgba(0, 0, 0, 0.327);
+    box-shadow: 0 0 10px rgb(76, 76, 76);
+    padding: 12px 20px;
+    font-size: 1.3rem;
+    cursor: pointer;
 }
-.description{
+.description {
     text-align: center;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    font-style: oblique;
-    margin-right: 2%;
-    margin-left: 2%;
+    margin: 2% 2%;
+    
+    font-style: italic;
+    font-size: 1.1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 700;
+    color: #444;
+    line-height: 1.6;
+    letter-spacing: 0.5px;
 }
+
 .price{
     text-align: center;
     margin-top: 7%;
