--- a/src/componentes/ItemDetailContainer/itemdetail.css
+++ b/src/componentes/ItemDetailContainer/itemdetail.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: 600px;
     border-radius: 1%;
-    box-shadow: 0 0 10px gray;
+    box-shadow: 0 0 15px rgb(18, 18, 18);
     border: solid 2px black;
 }
 .itemDetailImage{
@@ -30,7 +30,7 @@
     background-color: rgba(128, 128, 128, 0.095);
     box-shadow: 0 0 18px gray;
     border-radius: 1%;
-   
+
 
 }
 .name{
@@ -63,8 +63,9 @@
 
 .price{
     text-align: center;
-    margin-top: 7%;
-    margin-left: 10%;
+    margin-top: 5%;
+    margin-left: 40%;
+    
     width: 20%;
     text-align: center;
     background-color: rgba(191, 191, 191, 0.828);
@@ -78,4 +79,52 @@
     text-decoration: none;
     font-weight: 550;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.priceagre{
+    display: flex;
+    flex-direction: column;
+    
+}
+.numerocantidad {
+    display: flex;
+    align-items: center;
+    margin-left: 25%;
+    
+    gap: 15px;
+    margin-top: 7%;
+}
+
+.mas, .menos {
+    background-color: rgba(128, 128, 128, 0.561);
+    color: white;
+    border: none;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.mas:hover, .menos:hover {
+    background-color: #145a32;
+    transform: scale(1.1);
+}
+
+.agregar {
+    background-color: #b60000b9;
+    color: white;
+    border: none;
+    font-size: 1rem;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.agregar:hover {
+    background-color: #5c5c5c;
+    transform: scale(1.05);
 }
