--- a/src/componentes/Cart/cart.css
+++ b/src/componentes/Cart/cart.css
@@ -1,16 +1,17 @@
 .cartContainer {
-    padding: 20px;
+    padding: 30px;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     max-width: 1200px;
     margin: 0 auto;
+    width: 90%; /* Aumentar el tamaño del contenedor */
 }
 
 .cartTitle {
     font-size: 2rem;
     color: #333;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     text-align: center;
     font-weight: bold;
 }
@@ -19,13 +20,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 20px;
-    padding: 15px;
+    margin-bottom: 25px;
+    padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     background-color: #f9f9f9;
     transition: background-color 0.3s ease;
+    font-size: 1.1rem; /* Aumentar tamaño de texto para productos */
 }
 
 .cartItem:hover {
@@ -33,8 +35,8 @@
 }
 
 .cartItemImage {
-    width: 100px;
-    height: 100px;
+    width: 120px; /* Aumentar tamaño de la imagen */
+    height: 120px;
     object-fit: cover;
     border-radius: 8px;
 }
@@ -45,13 +47,16 @@
 .cartItemSubtotal {
     flex: 1;
     text-align: center;
-    font-size: 1rem;
     color: #333;
 }
-.vaciarterminar{
+
+.vaciarterminar {
     display: flex;
+    justify-content: space-between;
     flex-direction: row-reverse;
 }
+
+
 .cartItemDeleteButton {
     background-color: #e74c3c;
     color: white;
@@ -76,8 +81,8 @@
 }
 
 .cartTotalPrice {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
+    font-size: 1.8rem; /* Aumentar tamaño del precio total */
+    margin-bottom: 25px;
     color: #333;
     font-weight: bold;
 }
@@ -85,12 +90,13 @@
 .cartDeleteButton {
     background-color: #e74c3c;
     color: white;
-    padding: 9px 19px;
+    padding: 10px 18px;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
     font-size: 1.1rem;
+    margin-left: 5%;
 }
 
 .cartDeleteButton:hover {
@@ -101,8 +107,8 @@
 .cartCheckoutButton {
     display: inline-block;
     margin-top: 20px;
-    padding: 6px 15px;
-    font-size: 1.2rem;
+    padding: 5px 10px;
+    font-size: 1.3rem; /* Aumentar tamaño de texto */
     color: #fff;
     background-color: #2ecc71;
     text-decoration: none;
@@ -111,7 +117,6 @@
     border: 2px solid #27ae60;
     transition: all 0.3s ease;
     font-weight: bold;
-    margin: 5%;
 }
 
 .cartCheckoutButton:hover {
@@ -122,7 +127,8 @@
 
 .emptyCart {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 17px;
+    padding: 30px;
 }
 
 .emptyCartMessage {
